--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ h2{
     color: var(--text-color3);
     font-size: 3.6rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 10;
 }
 
 /* Navbar Styles */
@@ -59,7 +60,7 @@ h2{
     height: var(--navbar-height);
     background-color: var(--navbar-bg);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+    z-index: 1000 !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,7 +96,7 @@ h2{
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-    z-index: 1001;
+    z-index: 1001 !important;
 }
 
 .mobile-menu-btn span {
@@ -116,7 +117,7 @@ h2{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    z-index: 999 !important;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -150,7 +151,7 @@ h2{
         gap: 2rem;
         transition: right 0.3s ease;
         box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
-        z-index: 1000;
+        z-index: 1000 !important;
     }
 
     .nav-links.active {
@@ -199,7 +200,6 @@ h2{
     align-items: center;
     padding: 20px;
     position: relative;
-    z-index: 1;
     margin-top: var(--navbar-height);
     overflow: hidden;
 }
@@ -207,6 +207,7 @@ h2{
 .header h1 {
     font-size: 3.6rem;
     margin-bottom: 2rem;
+    color: var(--text-color3);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -214,6 +215,7 @@ h2{
     font-size: 2rem;
     margin-bottom: 3rem;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    color: var(--text-color3);
 }
 
 .header-images {
@@ -237,13 +239,13 @@ h2{
     width: 300px;
     transition: transform 0.3s ease;
     border-radius: 10px;
-    z-index: 1;
+    z-index: 10;
 }
 
 .image-container-peony {
     margin-right: -8px; /* Creates overlap */
     margin-top: -60px; /* Moves the image up */
-    z-index: 2; /* Makes this image appear on top */
+    z-index: 11; /* Makes this image appear on top */
     transform: rotate(-12deg);
 }
 
@@ -255,7 +257,7 @@ h2{
 .image-container-peony:hover,
 .image-container-dane:hover {
     transform: scale(1.02) rotate(-20deg);
-    z-index: 3; /* Brings hovered image to front */
+    z-index: 12; /* Brings hovered image to front */
 }
 
 .image-container-dane:hover {
@@ -279,6 +281,7 @@ h2{
     color: var(--text-color2);
     font-size: 1.8rem;
     font-family: 'Indie Flower', cursive, sans-serif;
+    z-index: 12;
 }
 
 @media (max-width: 700px) {
@@ -347,8 +350,11 @@ h2{
 }
 
 /* Add specific styles for Home and Date sections */
+
+
 #Home {
-    height: 50vh;
+    min-height: 100vh;
+    height: auto;
     margin-top: 0;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -356,8 +362,7 @@ h2{
     align-items: center;
     background-color: var(--background-color2);
     position: relative;
-    overflow: hidden;
-    padding: 20px;
+    padding: 6rem 20px;
 }
 
 #Home .content-center {
@@ -381,6 +386,7 @@ h2{
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 10;
 }
 
 #Home h2 {
@@ -392,12 +398,12 @@ h2{
 #Home p {
     font-size: 1.8rem;
     margin-top: 20px;
+    z-index: 10;
 }
 
 @media (max-width: 900px) {
     #Home {
         grid-template-columns: 1fr;
-        height: auto;
         gap: 20px;
     }
 
@@ -414,42 +420,6 @@ h2{
         order: 3;
     }
 }
-#Date>h2{
-    padding-bottom: 10rem;
-    font-size: 3rem;
-}
-
-#Date {
-    height: 50vh;
-    margin-top: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#clockdiv {
-    font-family: sans-serif;
-    color: #fff;
-    display: inline-block;
-    font-weight: 100;
-    text-align: center;
-    font-size: 30px;
-}
-
-#clockdiv>div {
-    padding: 10px;
-    border-radius: 3px;
-    background: #00587A;
-    display: inline-block;
-}
-
-#clockdiv div>span {
-    padding: 15px;
-    border-radius: 3px;
-    background: #0073A1;
-    display: inline-block;
-}
 
 /* Style for visible text */
 .smalltext {
@@ -463,6 +433,7 @@ h2{
     height: 90px;
     margin: 30px auto;
     animation: heartbeat 1.5s ease-in-out infinite;
+    z-index: 10;
 }
 
 .heart:before,
@@ -499,10 +470,50 @@ h2{
 }
 
 
+#Date {
+    min-height: 100vh;
+    height: auto;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 6rem 20px;
+}
+
+#Date > h2 {
+    padding-bottom: 5rem;
+    font-size: 3rem;
+}
+
+#clockdiv {
+    font-family: sans-serif;
+    color: #fff;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 30px;
+    z-index: 10;
+}
+
+#clockdiv>div {
+    padding: 10px;
+    border-radius: 3px;
+    background: #00587A;
+    display: inline-block;
+}
+
+#clockdiv div>span {
+    padding: 15px;
+    border-radius: 3px;
+    background: #0073A1;
+    display: inline-block;
+}
 
 
 /* Ceremony Section Styles */
 #Ceremony {
+    position: relative;
     height: 100vh;
     margin-top: 0;
     display: flex;
@@ -520,7 +531,8 @@ h2{
 
 #Ceremony p {
     margin-bottom: 2rem;
-    font-size: 1.8rem;
+    font-size: 1.8rem;  
+    z-index: 10;
 }
 
 #Ceremony img {
@@ -530,6 +542,7 @@ h2{
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     margin: 2rem auto;
     display: block;
+    z-index: 10;
 }
 
 @media (max-width: 700px) {
@@ -555,15 +568,24 @@ h2{
 /* Map Container Styles */
 #Location {
     background-color: var(--background-color2);
+    position: relative;
+}
+
+#Location h2{
+    position: relative;
+    margin-bottom: 2rem;
+    z-index: 10;
 }
 
 #Location p{
     color: var(--text-color3);
+    position: relative;
     font-size: 1.8rem;
+    z-index: 10;
 }
 
 #Location a{
-    color: var(--text-color2);
+    color: var(--text-color2);   
 }
 
 .map-container {
@@ -588,6 +610,7 @@ h2{
     width: 100%;
     height: 100%;
     border: 0;
+    z-index: 10;
 }
 
 @media (max-width: 700px) {
@@ -612,12 +635,11 @@ h2{
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+
 }
 
 .accommodation > * {
     position: relative;
-    z-index: 2;
 }
 
 .accommodation h2 {
@@ -633,6 +655,7 @@ h2{
     background: rgba(0, 0, 0, 0.2);
     padding: 2rem;
     border-radius: 10px;
+    z-index: 10;
 }
 
 .accommodation-grid {
@@ -642,6 +665,7 @@ h2{
     gap: 3rem;
     max-width: 1400px;
     margin: 0 auto;
+    z-index: 10;
 }
 
 .accommodation-tile {
@@ -754,6 +778,7 @@ h2{
     border-radius: 20px;
     padding: 40px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    z-index: 10;
 }
 
 .rsvp-content {
@@ -859,24 +884,31 @@ h2{
 }
 /* RSVP Section Styles END*/
 /* Getting There Section Styles */
+
 #Getting-There {
     background-color: var(--background-color1);
     padding: 4rem 2rem;
+    position: relative;
 }
 
 #Getting-There h2 {
     margin-bottom: 3rem;
+    z-index: 10;
+    position: relative;
 }
 
 #Getting-There h3 {
+    position: relative;
     font-size: 2.4rem;
     color: var(--text-color3);
     margin-bottom: 1.5rem;
     border-bottom: 2px solid var(--border-color1);
     padding-bottom: 0.5rem;
+    z-index: 10;
 }
 
 .flights, .activities {
+    position: relative;
     background: white;
     border-radius: 10px;
     padding: 2rem;
@@ -884,6 +916,7 @@ h2{
     max-width: 800px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
+    z-index: 10;
 }
 
 .flights:hover, .activities:hover {
@@ -933,6 +966,7 @@ h2{
     .flights, .activities {
         padding: 1.5rem;
         margin: 1.5rem 1rem;
+        z-index: 10;
     }
 
     #Getting-There li {
@@ -956,6 +990,7 @@ h2{
     border-radius: 15px;
     padding: 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    z-index: 10;
 }
 
 .contact-content {
@@ -1064,3 +1099,133 @@ h2{
     }
 }
 /* Contact Section Styles END*/
+
+#petals {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: right;
+    pointer-events: none;
+    z-index: 5;
+}
+
+#petals i {
+    display: inline-block;
+    width: 30%;
+    height: 100%;
+    z-index: 5;
+    border-radius: 58% 20% 70%;
+    -webkit-animation: falling 10s 0s infinite;
+    animation: falling 10s 0s infinite;
+    opacity: 0;
+    pointer-events: none;
+}
+
+#petals i:nth-of-type(2n) { 
+    -webkit-animation: falling2 6s 0s infinite;
+    animation: falling2 6s 0s infinite;
+}
+#petals i:nth-of-type(3n) { 
+    -webkit-animation: falling3 12s 0s infinite;
+    animation: falling3 12s 0s infinite;
+}
+
+#petals i:nth-of-type(n)    { width: 21px; height: 20px; }
+#petals i:nth-of-type(2n+1)    { height:17px; width:19px; }
+
+#petals i:nth-of-type(3n+2)  { height:14px; width:11px; }
+
+
+#petals i:nth-of-type(n)   { -webkit-animation-delay: 1.9s;}
+#petals i:nth-of-type(2n)  { -webkit-animation-delay: 3.9s;}
+#petals i:nth-of-type(3n)  { -webkit-animation-delay: 2.3s;}
+#petals i:nth-of-type(4n)  { -webkit-animation-delay: 4.4s;}
+#petals i:nth-of-type(5n)  { -webkit-animation-delay: 5s;  }
+#petals i:nth-of-type(6n)  { -webkit-animation-delay: 3.5s;}
+#petals i:nth-of-type(7n)  { -webkit-animation-delay: 2.8s;}
+#petals i:nth-of-type(8n)  { -webkit-animation-delay: 1.5s;}
+#petals i:nth-of-type(9n)  { -webkit-animation-delay: 3.3s;}
+#petals i:nth-of-type(10n) { -webkit-animation-delay: 2.5s;}
+#petals i:nth-of-type(11n) { -webkit-animation-delay: 1.2s;}
+#petals i:nth-of-type(12n) { -webkit-animation-delay: 4.1s;}
+#petals i:nth-of-type(13n) { -webkit-animation-delay: 1s;  }
+#petals i:nth-of-type(14n) { -webkit-animation-delay: 4.7s;}
+#petals i:nth-of-type(15n) { -webkit-animation-delay: 3s;  }
+
+#petals i:nth-of-type(n)    { background: url("https://lh3.googleusercontent.com/gr2Xjzyy5f-vdto3iuLhafp-v-EJwMrjtkOWu-bXwUpmcEepO6TmC3GR7pOshZS5FWCpRTiIl4Jpf6BkW5EeU23O9p8tV9TfGJcvzwH7QYw2-OG-VymP0-TOM1Pu85vbxmIGXiiHQzPhruXJKdK2J-jvl8LDhMHoIusXYbEmqHWdXBKkjjloUNzwcXXIBq-EWT21Q07txQqv5fSlKtLUeUCPVR10lZCThup1XA5Ta-GGbHzGsY0fm9uyAyJ4qm1FgDRxvVH3l847ShSRuKiHCDnjeF5d4hDMCYsfjK0ZR4fFfYjmrQhDwGtZ6nIl3uwohkT05MRR3L169pV9FYkeSAgyQsKXHFzdjcVfuPkVOvkB10K26AJjAxq6M2FrFFw5YSuO_FAhSTOH_dZkLFsH3mcqIw5DRQHq2LHqkIokNNhtTV9L-h7thwtQubu7pJvF3W3WbwEla9X9zgm3BI_jnlgjHmevrr-gIly7mZX6eJwWtV2YGOq7howCFxOLqZVaqDj8VwsdMg9_o0VzxPh9L8qCpkWnso9jjyQyyX5CAgXECFW0ViRxrtYcJgxAcaWkmZ9Vf_14yTgF1UgspIX7_LIrMCvxqy1v8M9Oh6mE2Sii6ogob9SUhsJfhYPCS6Wzc91GEfQzAd8Fn1in9sL5T5HbKN7XeulHkrkqQ8qsX4SjMLnR_ifY6snMMqMpv0U30CJP9yqjo_vAcyd52juQtk2iRQ=s22-no") no-repeat;}
+
+
+#petals i:nth-of-type(n)    {transform:rotate(120deg);}
+
+#petals i:nth-of-type(n) { -webkit-animation-timing-function:ease-in-out;}
+
+
+/* #petals i:nth-of-type(n)    { opacity: 1;}
+#petals i:nth-of-type(3n+1)  { opacity: .95;}
+#petals i:nth-of-type(3n+2)  { opacity: .8;} */
+
+
+@keyframes falling {
+    0% {
+        transform: translate3d(300px,0,0) rotate(0deg);
+        -webkit-transform: translate3d(300px,0,0) rotate(0deg);
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        transform: translate3d(550px,700px,0) rotate(-60deg);
+        -webkit-transform: translate3d(550px,700px,0) rotate(-60deg);
+        opacity: 0;
+    }
+}
+
+@keyframes falling3 {
+    0% {
+        transform: translate3d(0,0,0) rotate(0deg);
+        -webkit-transform: translate3d(0,0,0) rotate(0deg);
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        transform: translate3d(-530px,1500px,0) rotate(90deg);
+        -webkit-transform: translate3d(-530px,1500px,0) rotate(90deg);
+        opacity: 0;
+    }
+}
+
+@keyframes falling2 {
+    0% {
+        transform: translate3d(0,0,0) rotate(150deg);
+        -webkit-transform: translate3d(0,0,0) rotate(150deg);
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        transform: translate3d(-400px,680px,0) rotate(0deg);
+        -webkit-transform: translate3d(-400px,680px,0) rotate(0deg);
+        opacity: 0;
+    }
+}
+
+@media screen and (max-height: 600px) {
+    #Home {
+        padding: 8rem 20px;
+    }
+    
+    #Home img {
+        height: 200px;
+    }
+    
+    #Date {
+        padding: 8rem 20px;
+    }
+    
+    #Date > h2 {
+        padding-bottom: 3rem;
+    }
+}
