--- a/styles.css
+++ b/styles.css
@@ -594,8 +594,8 @@ p{
 }
 
 #Ceremony img {
-    max-width: 30%;
-    height: 20%;
+    max-width: 70%;
+    height: auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     margin: 1rem auto;
