--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ html{
       /*set font size 62.5%, so 1rem = 10px (100% = 16px)*/
     font-size: 62.5%; 
     background-color: var(--background-color1);
+    overflow: hidden;
 }
   
 body{
@@ -48,6 +49,34 @@ body{
     text-align: center;
     padding-top: var(--navbar-height);
     background-color: var(--background-color1);
+    overflow: hidden;
+}
+
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff; /* Background color of the loading screen */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it's on top */
+    transition: opacity 5s ease-out;
+}
+
+#loading-screen img {
+    width: 150px; /* Adjust logo size */
+    height: auto;
+}
+
+#loading-screen.fade-out {
+    opacity: 0;
+}
+
+#main-content {
+    display: none; /* Hide main content initially */
 }
 
 h2{
@@ -755,6 +784,7 @@ p{
     object-fit: contain;
     background-color: transparent;
     pointer-events: none; /* Prevent image dragging */
+    opacity: 0.9;
 }
 
 .slide.active {
@@ -844,6 +874,7 @@ p{
     height: 100%;
     border: 0;
     z-index: 10;
+    opacity: 0.95;
 }
 
 @media (max-width: 700px) {
