--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,7 @@ p{
     align-items: center;
     padding: 2px;
     position: relative;
-    margin-top: var(--navbar-height);
+    margin-top: 10px !important;
     overflow: hidden;
 }
 
@@ -288,7 +288,7 @@ p{
     text-transform: uppercase;
 }
 
-.header p {
+.header-welcome {
     margin-bottom: 3rem;
     color: var(--text-color3);
     font-size: 3rem;
@@ -371,8 +371,12 @@ p{
         font-size: 3.5rem;
     }
 
-    .header p {
-        font-size: 2.2rem;
+    .header-text {
+        font-size: 1.4rem;
+    }
+
+    .header-welcome{
+        font-size: 2rem;
     }
 
     .header-images {
@@ -404,8 +408,12 @@ p{
         font-size: 2.5rem;
     }
 
-    .header p {
+    .header-text {
         font-size: 1.4rem;
+    }
+
+    .header-welcome{
+        font-size: 2rem;
     }
 
     .header-images {
@@ -487,7 +495,15 @@ p{
     z-index: 10;
     color: var(--text-color3);
 }
+.deadline{
+    font-size: 4rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+}
 
+.countdown{
+    font-size: 1.8rem;
+}
 
 @media (max-width: 900px) {
     #Home {
@@ -1449,6 +1465,8 @@ p{
 
 #loading-screen {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: var(--background-color1);
