--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ h3{
 p{
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     font-size: 1.4rem;
+    line-height: 2 !important;
 }
 
 /* Navbar Styles */
@@ -496,13 +497,12 @@ p{
     color: var(--text-color3);
 }
 .deadline{
-    font-size: 4rem;
+    font: 4rem Lucida Handwriting !important;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-    text-transform: uppercase;
 }
 
 .countdown{
-    font-size: 1.8rem;
+    font-size: 2.5rem;
 }
 
 @media (max-width: 900px) {
