--- a/styles.css
+++ b/styles.css
@@ -497,8 +497,7 @@ p{
     color: var(--text-color3);
 }
 .deadline{
-    font: 4rem Lucida Handwriting !important;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    font: 5rem 'Big Shoulders Stencil Text', cursive !important;
 }
 
 .countdown{
