--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ p{
 
 .image-container-peony,
 .image-container-dane {
-    background: white;
+    background: #fff;
     padding: 15px 15px 60px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -348,6 +348,7 @@ p{
     height: 400px;
     object-fit: cover;
     display: block;
+    border-radius: 5px;
 }
 
 .image-caption {
@@ -485,6 +486,8 @@ p{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 10;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
 }
 
 #Home h2 {
@@ -747,6 +750,7 @@ p{
     border-radius: 10px;
     cursor: grab;
     touch-action: pan-y pinch-zoom;
+    z-index: 10;
 }
 
 /* Add spacing between slideshows */
@@ -761,22 +765,22 @@ p{
     position: absolute;
     transition: opacity 0.8s ease-in-out;
     padding: 10px;
-    background: transparent;
-    z-index: 10;
+    background: var(--background-color1);
 }
 
 .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    width: 99%;
+    height: 99%;
     background-color: transparent;
     pointer-events: none; /* Prevent image dragging */
     opacity: 0.9;
+    object-fit: contain;
+    mix-blend-mode: darken;
 }
 
 .slide.active {
     display: block;
-    opacity: 1;
+    opacity: 0.9;
 }
 
 /* Dots/bullets/indicators */
@@ -811,6 +815,8 @@ p{
         margin-top: 3rem;
     }
 }
+
+
 /* Map Container Styles */
 #Location {
     background-color: var(--background-color2);
