--- a/styles.css
+++ b/styles.css
@@ -725,7 +725,7 @@ p{
     z-index: 10;
 }
 
-#Dress-Code p{
+.dress-text{
     position: relative;
     color: var(--text-color3);
     max-width: 800px;
@@ -735,9 +735,7 @@ p{
     padding: 2rem;
     border-radius: 10px;
     z-index: 10 !important;
-    
 }
-
 
 /* Slideshow styles */
 .slideshow-container-men,
@@ -814,6 +812,51 @@ p{
     .slideshow-container-women {
         margin-top: 3rem;
     }
+}
+
+.color-palette-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0;
+    margin: 1rem auto;
+    max-width: 800px;
+    align-items: center;
+    justify-content: center;
+    justify-items: center; /* Center items within the grid */
+}
+
+.color-tile {
+    width: 95%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    background: white;
+}
+
+.color-swatch {
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+    margin: 1px;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.color-caption {
+    font-size: 1.1rem;
+    color: white; /* Change this to a contrasting color if needed */
+    text-align: center;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Optional: Add a background for better readability */
+    padding: 0px;
+    border-radius: 0 0 10px 10px; /* Rounded corners at the bottom */
 }
 
 
