--- a/styles.css
+++ b/styles.css
@@ -600,12 +600,12 @@ p{
 
 #clockdiv {
     font-family: sans-serif;
-    color: #fff;
+    color: var(--text-color3);
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 15px;
-    font-weight: 100;
+    font-weight: 600;
     text-align: center;
     font-size: 30px;
     z-index: 10;
@@ -613,12 +613,13 @@ p{
     max-width: 600px;
     margin: 0 auto;
     padding: 0 10px;
+    opacity: 0.9;
 }
 
 #clockdiv > div {
     padding: 10px;
     border-radius: 3px;
-    background: #00587A;
+    background: #efbf80;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -629,9 +630,10 @@ p{
 #clockdiv div > span {
     padding: 15px;
     border-radius: 3px;
-    background: #0073A1;
+    background: var(--background-color1);
     display: block;
     width: 100%;
+    opacity: 0.9;
 }
 
 @media screen and (max-width: 480px) {
