--- a/styles.css
+++ b/styles.css
@@ -1565,6 +1565,7 @@ p {
 
 /* Floating Notification Styles */
 #notification-container {
+  display: hidden;
   position: fixed;
   bottom: 100px;
   right: 20px;
