--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   padding: 0;
   margin: 0;
   text-align: center;
-  padding-top: var(--navbar-height);
+  /*padding-top: var(--navbar-height);*/
   background-color: var(--background-color1);
   top: 0px !important;
 }
