--- a/styles.css
+++ b/styles.css
@@ -227,14 +227,14 @@ p {
 .header {
   background-color: var(--background-color1);
   color: var(--text-color1);
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2px;
   position: relative;
-  margin-top: 10px !important;
+  /* margin-top: 10px !important; */
   overflow: hidden;
 }
 
